# CMakeGuide

./: README.md
Stage0/: README.md
Stage0/include/: mathfunctions.h
Stage0/include/math_functions/: mysqrt.h
Stage0/src/: main.cpp
Stage0/src/math_functions/: mysqrt.cpp
Stage0/src/mathfunctions/: mathfunctions.cpp
Stage1/: README.md
Stage1/src/: main.cpp
Stage2/: Makefile  README.md
Stage3/: CMakeLists.txt  README.md
Stage4/: CMakeLists.txt  README.md
Stage4/tests/: test_mysqrt.cpp
